# groth16-solana

./: .gitignore  Anchor.toml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
circuits/preimage/: circuit.circom  input.json
circuits/range/: circuit.circom  input.json
programs/verifier/: Cargo.toml
programs/verifier/src/: errors.rs  lib.rs  state.rs  verify.rs
scripts/: example.sh  gen-inputs.mjs  setup.sh
tests/: helpers.ts  integration.test.ts  measurements.test.ts  vitest.config.ts
ts/src/: client.ts  reshape.ts  upload-vk.ts  verify.ts
ts/tests/: reshape.test.ts
ts/tests/fixtures/: gen.mjs
ts/tests/fixtures/preimage/: expected.json  proof.json  public.json  vk.json
ts/tests/fixtures/range/: expected.json  proof.json  public.json  vk.json
writeup/: README.md
